<resources>
    <string name="app_name">spoon</string>
    <string name="restaurant_db_name">RESTAURANT_DB</string>
    <string name="title_home">Home</string>
    <string name="title_bookings">Bookings</string>
    <string name="title_restaurants">Restaurants</string>
    <string name="title_meals">Meals</string>

    <string name="settings">Settings</string>

    <string name="long_Text">
        This is a fragment for the restaurants page
    </string>

    <!-- Home Strings -->
    <string name="en_home_upcomingreservation_title">You have an upcoming booking! At %1$s</string>

    <string name="en_home_upcomingreservation_notification">Reservation at %1$s at %2$s.</string>
    <string name="en_home_upcomingreservation_viewreservation">View Reservation >></string>

    <string name="en_home_findrestaurantsquickly">Find Restaurants Quickly!</string>
    <string name="en_home_findrestaurantsquickly_proximity">Near Me Now</string>
    <string name="en_home_findrestaurantsquickly_staff">Staff Picks</string>

    <string name="en_home_findrestaurantsquickly_localised_cheap">£</string>
    <string name="en_home_findrestaurantsquickly_localised_moderate">££</string>
    <string name="en_home_findrestaurantsquickly_localised_expensive">£££</string>

    <string name="en_home_recentrestaurant_title">My Most Recent Visit</string>
    <string name="en_home_recentrestaurant_restaurant_title">You visited %1$s.</string>

    <!-- Booking Strings -->
    <string name="en_bookingFragment_NoBookings">You don\'t have any bookings! To make one, select a Restaurant and choose "Book Restaurant"</string>

    <string-array name="en_bookings_SortOptions">
        <item>Alphabetical (Ascending)</item>
        <item>Alphabetical (Descending)</item>
        <item>Distance (Ascending)</item>
        <item>Distance (Descending)</item>
        <item>Date (Ascending)</item>
        <item>Date (Descending)</item>
        <item>Number of Attendees (Ascending)</item>
        <item>Number of Attendees (Descending)</item>
    </string-array>

    <!-- Edit Booking Strings-->
    <string name="en_editBooking_title">Edit a Booking</string>
    <string name="en_editBooking_youAreEditing">You are editing your booking at: "%1$s", on %2$s at %3$s.</string>
    <string name="en_editBooking_wrongRestaurant">Wrong booking? Go back to Bookings to select a different one.</string>


    <!-- Restaurant Fragment Strings -->
    <!-- Booking Strings -->
    <string name="en_restaurantFragment_NoRestaurants">No restaurants are found! Try changing your filter settings or use the map to find new restaurants, then press the refresh button.</string>

    <string name="en_restaurantFragment_wefoundXRestaunts">%1$s matching restaurants:</string>
    <string name="en_restaurantFragment_newSearchArea">New Search Area</string>
    <string name="en_restaurantFragment_editSearchArea">Edit Search Area</string>

    <string name="en_restaurantsMapFragment_xRestaurantsOutsideMap_Singular">A restaurant is off the screen right now. Zoom out to see it.</string>
    <string name="en_restaurantsMapFragment_xRestaurantsOutsideMap_Plural">%1d restaurants are off the screen right now. Zoom out to see them.</string>

    <string name="en_findARestaurant_Dialog_Title">Search for a restaurant</string>
    <string name="en_findARestaurant_Dialog_TextValue">Restaurant Name</string>
    <string name="en_findARestaurant_Dialog_Button1">Use GPS</string>
    <string name="en_findARestaurant_Dialog_Button2">Use Map</string>
    <string name="en_findARestaurant_Dialog_Button3">Cancel</string>


    <string-array name="en_restaurants_SortOptions">
        <item>Alphabetical (Ascending)</item>
        <item>Alphabetical (Descending)</item>
        <item>Distance (Ascending)</item>
        <item>Distance (Descending)</item>
    </string-array>

    <string-array name="en_restaurant_category_options">
        <item>Visited Restaurants</item>
        <item>Non-Visited Restaurants</item>
        <item>American</item>
        <item>Asian</item>
        <item>Austrian</item>
        <item>British</item>
        <item>Brunch</item>
        <item>Caribbean</item>
        <item>Chicken</item>
        <item>Chinese</item>
        <item>French</item>
        <item>Grill</item>
        <item>Hot Dogs</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Lebanese</item>
        <item>Middle Eastern</item>
        <item>Natural/Healthy</item>
        <item>Sandwich</item>
        <item>Seafood</item>
    </string-array>

    <!-- Restaurant Detailed -->
    <string name="en_restaurantDetails_OpenInMaps">Open Restaurant in Google Maps</string>
    <string name="en_restaurantDetails_BookRestaurant">Book Restaurant</string>
    <string name="en_restaurantDetails_AddMeal">Add Meal</string>
    <string name="en_restaurantDetails_SetVisited">Set as Visited</string>
    <string name="en_restaurantDetails_SetNotVisited">Set as not Visited</string>


    <!-- Restaurant Booking Strings -->
    <string name="en_bookrestaurant_title">Book a Restaurant</string>
    <string name="en_bookrestaurant_youarebooking">You are booking: "%1$s"</string>
    <string name="en_bookrestaurants_wrongrestaurant">Wrong restaurant? Go to "Restaurants" to select a new one.</string>

    <!-- Restaurant Booking Details Strings -->
    <string name="en_bookingDetails_numAttendees_singleAttendee">%1d attendee</string>
    <string name="en_bookingDetails_numAttendees_multipleAttendees">%1d attendees</string>

    <string name="en_bookingDetails_AddMeal">Add a Meal to this Booking</string>
    <string name="en_bookingDetails_ViewRestaurant">View Extra Restaurant Details</string>
    <string name="en_bookingDetails_EditBooking">Edit Booking</string>
    <string name="en_bookingDetails_ShareBooking">Share Booking</string>
    <string name="en_bookingDetails_DeleteBooking">Delete Booking</string>


    <string name="en_shareBooking_shareString_Intent_Title">Share Booking via</string>
    <string name="en_shareBooking_shareString_Body">I\'m going to be dining at %1$s on %2$s at %3$s, will you join me? See http://spoonapp.com/booking/12345 for booking information</string>

    <!-- Meals Fragment Strings -->
    <string name="en_mealsFragment_NoMealsInfoText">You don\'t have any meals yet! You can make one by selecting a booking or a restaurant, then selecting "Add Meal"</string>

    <!-- New Meal Fragment Strings -->
    <string name="en_newMealsFragment_Title">Create a new Meal</string>
    <string name="en_newMealsFragment_SubTitle">For your booking at %1$s on %2$s at %3$s</string>

    <!-- Edit Meal Fragment Strings -->
    <string name="en_editMealFragment_Title">Edit Meal</string>
    <string name="en_editMealFragment_Subtitle_IncludingBooking">For your booking at %1$s on %2$s at %3$s.</string>
    <string name="en_editMealFragment_Subtitle_DeletedBooking">For your deleted booking at %1$s.</string>

    <!-- Meal Detailed Fragment Strings -->
    <string name="en_mealDetailedFragment_Edit">Edit This Meal</string>
    <string name="en_mealDetailedFragment_Share">Share This Meal</string>
    <string name="en_shareMeal_shareString_Intent_Title">Share Meal via</string>
    <string name="en_shareMeal_shareString_Body_IncludingBooking">Have a look at what I ate at %1$s on %2$s at %3$s! http://spoonapp.com/booking/12345</string>
    <string name="en_shareMeal_shareString_Body_DeletedBooking">Have a look at what I ate at %1$s! http://spoonapp.com/meal/12345</string>


    <string name="en_mealDetailedFragment_Delete">Delete This Meal</string>


</resources>
