<android.support.design.widget.AppBarLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RestaurantDetailedFragment"
    android:orientation="vertical">

        <!-- Toolbar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="parallax"
            app:layout_constraintTop_toTopOf="parent"
            app:title="spoon"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Restaurant Name"
            android:textColor="@color/darkGrey"
            android:textSize="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/restaurant_vicinity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/darkGrey"
        android:text="Viscinity"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_name" />

    <TextView
        android:id="@+id/bookingDate"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/darkGrey"
        android:text="Date"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calendar"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_vicinity" />

    <TextView
        android:id="@+id/bookingTime"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/darkGrey"
        android:text="Time"
        android:textSize="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clock"
        app:layout_constraintTop_toBottomOf="@+id/bookingDate" />

    <TextView
        android:id="@+id/bookingAttendeeCount"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Attendees"
        android:textSize="22dp"
        android:textColor="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clock3"
        app:layout_constraintTop_toBottomOf="@+id/bookingTime" />

    <Button
        android:id="@+id/addMealBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/en_restaurantDetails_AddMeal"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/viewRestaurantBtn"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/viewRestaurantBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/en_bookingDetails_ViewRestaurant"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editBookingBtn" />

    <Button
        android:id="@+id/editBookingBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/en_bookingDetails_EditBooking"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/shareBookingBtn" />

    <Button
        android:id="@+id/shareBookingBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/en_bookingDetails_ShareBooking"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/deleteBookingBtn" />

    <Button
        android:id="@+id/deleteBookingBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/en_bookingDetails_DeleteBooking"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@android:drawable/ic_menu_my_calendar"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_vicinity" />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="31dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_access_time_black_24dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />

    <ImageView
        android:id="@+id/clock3"
        android:layout_width="31dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_people_black_24dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clock" />

</android.support.constraint.ConstraintLayout>
</android.support.design.widget.AppBarLayout>