<android.support.design.widget.AppBarLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MealDetailedFragment"
    android:orientation="vertical">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="parallax"
        app:layout_constraintTop_toTopOf="parent"
        app:title="spoon"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/mealTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Meal Title"
        android:textSize="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:textColor="@color/darkGrey"
        />

    <TextView
        android:id="@+id/mealDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:text="Description"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@+id/mealTitle"
        tools:layout_editor_absoluteX="8dp"
        android:textColor="@color/darkGrey"
        />

    <TextView
        android:id="@+id/mealAuxiliary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Additional Information"
        android:textSize="22dp"
        app:layout_constraintTop_toBottomOf="@+id/mealDescription"
        tools:layout_editor_absoluteX="8dp"
        android:textColor="@color/darkGrey"
        />

    <Button
        android:id="@+id/editMealBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/en_mealDetailedFragment_Edit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/shareMealBtn"
        />

    <Button
        android:id="@+id/shareMealBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/en_mealDetailedFragment_Share"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/deleteMealBtn"
        />

    <Button
        android:id="@+id/deleteMealBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/en_mealDetailedFragment_Delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="392dp"
        android:layout_height="367dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealAuxiliary" />

</android.support.constraint.ConstraintLayout>
</android.support.design.widget.AppBarLayout>